--- a/BitoDesktop.WPF/BitoDesktop.WPF.csproj
+++ b/BitoDesktop.WPF/BitoDesktop.WPF.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Icons\homeactive.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Icons\homeactive.png" />
+    <Resource Include="Icons\reload.png" />
+    <Resource Include="Icons\settings.png" />
   </ItemGroup>
 
 </Project>
