Pos (SideBar) Initialized as page

--- a/BitoDesktop.WPF/BitoDesktop.WPF.csproj
+++ b/BitoDesktop.WPF/BitoDesktop.WPF.csproj
@@ -20,4 +20,8 @@
     <Resource Include="Icons\settings.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\PosControllers\" />
+  </ItemGroup>
+
 </Project>
