--- a/BitoDesktop.Data/BitoDesktop.Data.csproj
+++ b/BitoDesktop.Data/BitoDesktop.Data.csproj
@@ -1,13 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\BitoDesktop.Domain\BitoDesktop.Domain.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Contexts\" />
-    <Folder Include="Repositories\" />
-    <Folder Include="IRepositories\" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Dapper" Version="2.0.151" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.8" />
+		<PackageReference Include="Npgsql" Version="7.0.6" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+	</ItemGroup>
 </Project>
