--- a/BitoDesktop.Service/BitoDesktop.Service.csproj
+++ b/BitoDesktop.Service/BitoDesktop.Service.csproj
@@ -1,14 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-  </PropertyGroup>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
-    <Folder Include="Exceptions\" />
-    <Folder Include="Extensions\" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<ProjectReference Include="..\BitoDesktop.Data\BitoDesktop.Data.csproj" />
+		<ProjectReference Include="..\BitoDesktop.Domain\BitoDesktop.Domain.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+	</ItemGroup>
 </Project>
