--- a/BitoDesktop.Data/BitoDesktop.Data.csproj
+++ b/BitoDesktop.Data/BitoDesktop.Data.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+
 	<ItemGroup>
 		<ProjectReference Include="..\BitoDesktop.Domain\BitoDesktop.Domain.csproj" />
 	</ItemGroup>
@@ -10,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="Dapper" Version="2.0.151" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.8" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Npgsql" Version="7.0.6" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
 	</ItemGroup>
