--- a/BitoDesktop.Service/BitoDesktop.Service.csproj
+++ b/BitoDesktop.Service/BitoDesktop.Service.csproj
@@ -11,5 +11,6 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 </Project>
